# rtc_call

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt
src/: CMakeLists.txt  rtc_call.cc  rtc_call.h  rtc_call_engine.cc  rtc_call_engine.h  rtc_call_interface.h  rtc_call_user.cc  rtc_call_user.h  rtc_common_types.h  rtc_video_capturer.cc  rtc_video_capturer.h  rtc_video_sink.h
src/render/: CMakeLists.txt  interface.cc  interface.h  sdl_renderer.cc  sdl_renderer.h  sdl_util.h
src/session/: CMakeLists.txt  interface.cc  interface.h  json_contents.cc  json_contents.h  make_contents.cc  resip_util.h  sip_call.cc  sip_call.h  sip_stack.cc  sip_stack.h  sip_user.cc  sip_user.h  sip_user_state.cc  sip_user_state.h
src/utility/: callback_wrapper.h  invoker.h  optional.h  scoped_guard.h  singleton.h  unique_ptr.h
test/: CMakeLists.txt  resip_thread_test.cc  rtc_call_test.cc  rtc_session_test.cc  video_render_test.cc
